/*
 * Copyright (C) 2017 Dgraph Labs, Inc. and Contributors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

//import "raft.proto";

package aspirapb;

// Worker services.
message Payload {
	bytes Data = 1;
}

message RaftContext {
	uint64 id = 1;
	uint64 gid = 2;
	string addr = 3;
}


//save MembershipState into 
message MembershipState {
	map<uint64,string> nodes = 1;
}

message Snapshot {
	RaftContext context = 1;
	uint64 index = 2;
	uint64 read_ts = 3;
	// done is used to indicate that snapshot stream was a success.
	bool done	= 4;
	// since_ts stores the ts of the last snapshot to support diff snap updates.
	uint64 since_ts = 5;
}


message RaftBatch {
	RaftContext context = 1;
	Payload payload = 2;
}

message EntryMeta {
        uint64     Term  = 1;
        uint64     Index = 2;
		enum Type {
			Put = 0;
			LeaderCommit = 1;
			ConfChange = 2;
			PutWithOffset = 3;
		}
		Type EntryType = 3;
		bytes      Data = 4;
		string     associateKey=5;
}

//Type == Put ==> set associateKey, save ext
//Type == PutWithOffset => ext save all the data
//Type == LeaderCommit => ...


/*
AspiraProposalPut{
	string associateKey
	bytes data
}
AspiraProposalPutWithOffset {
	string associateKey
	bytes data
	uint64 key
	uint32 reservation
	uint32 offset
}
*/

message AspiraProposal {
	enum Type {
		Put = 0;
		PutWithOffset = 1;
		Delete = 2;
	}
	Type ProposalType = 1;
	uint64 key = 2;
	uint64 offset = 3;
	string associateKey = 4;
	bytes data = 5;
}


message BlobRaftMessageRequest {
	RaftContext context = 1;
	Payload payload = 2;
}

message BlobRaftMessageResponse {
}

//raft intenal service
service Raft {
	rpc Heartbeat (Payload)        returns (stream Payload) {}
	rpc RaftMessage (stream RaftBatch) returns (Payload) {}
	rpc BlobRaftMessage (BlobRaftMessageRequest) returns (BlobRaftMessageResponse) {}
	rpc JoinCluster (RaftContext)      returns (Payload) {}
	rpc StreamSnapshot (RaftContext) returns (stream Payload) {}
}



message AddWorkerRequest {
	uint64 gid = 1;
 	uint64 id = 2;
	string JoinCluster = 3;
}

message AddWorkerResponse {
}


message PutStreamRequest {
	oneof data {
		uint64 gid = 1;
		Payload payload = 2;
	}
}

message PutRequest {
	uint64 gid = 1;
	Payload payload = 2;
}

message PutResponse{
	uint64 gid = 1;
	uint64 oid = 2;
}

message GetRequest {
	uint64 gid = 1;
	uint64 oid = 2;
}

service Store {
	rpc AddWorker(AddWorkerRequest) returns (AddWorkerResponse) {}
	rpc PutStream(stream PutStreamRequest) returns (PutResponse){}
	rpc Put(PutRequest) returns (PutResponse){}
	rpc Get(GetRequest) returns (stream Payload){}
	//rpc RemoveWorker
	//rpc Put
	//rpc Delete
	//rpc Get
}

//zero service
message ZeroAllocIDRequest{
	//header
	int32 count = 1;
}

//allocID range from [start,end), half open
message ZeroAllocIDResponse {
	uint64 start = 1;
	uint64 end = 2;
}

//I do not want to import raft's proto.
//the progress should be the same
message WorkerInfo {
	enum ProgressType {
		Probe = 0;
		Replicate = 1;
		Snapshot = 2;
	}
	MembershipState state = 1;
	map<uint64,ProgressType> progress = 2;
	RaftContext raftContext = 3;
	bool leader = 4;
}


message ZeroHeartbeatRequest {
	uint64 storeId = 1;
	map<uint64, WorkerInfo> workers = 2;
}

message ZeroHeartbeatResponse {
}


message ZeroRegistStoreRequest {
	string address = 1;
	uint64 storeId = 2;
	uint64 emtpySlots = 3;
	string name = 4;
}


message ZeroRegistStoreResponse {
}

message ZeroStoreInfo {
	string address = 1;
	uint64 storeId = 2;
	uint64 emtpySlots = 3;
	repeated uint64 currentGids = 4;
	string name = 5;
}

//zero service
service Zero {
	rpc AllocID(ZeroAllocIDRequest) returns (ZeroAllocIDResponse){}
	rpc RegistStore(ZeroRegistStoreRequest) returns (ZeroRegistStoreResponse) {}
	rpc StreamHeartbeat(stream ZeroHeartbeatRequest) returns (ZeroHeartbeatResponse){}
}